--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Movie Search</title>
+    <script defer data-domain="example.com" src="https://plausible.io/js/plausible.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
