--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <script defer data-domain="example.com" src="https://plausible.io/js/plausible.js"></script>
 </head>
-<body>
+<body class="dark">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 </body>
