--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Movie Search</title>
+    <meta name="description" content="Get stats about your favorite movies"/>
     <meta charset="utf-8"/>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="theme-color" content="#282c34"/>
-    <meta
-            name="description"
-            content="Get stats about your favorite movies"
-    />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-    <title>Movie Search</title>
+    <meta name="theme-color" content="#282c34"/>
+    <script defer data-domain="example.com" src="https://plausible.io/js/plausible.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
           integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <script defer data-domain="example.com" src="https://plausible.io/js/plausible.js"></script>
 </head>
 <body class="dark">
     <noscript>You need to enable JavaScript to run this app.</noscript>
