updated submodules, reworded description

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Movie Search</title>
-    <meta name="description" content="Get stats about your favorite movies"/>
+    <title>Movie and TV Search</title>
+    <meta name="description" content="Get stats about your favorite movies and series"/>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
