--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Get stats about your favorite movies and series"/>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <meta name="theme-color" content="#282c34"/>
