added more env variables

--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Movie and TV Search</title>
-    <meta name="description" content="Get stats about your favorite movies and series"/>
-    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="description" content="%REACT_APP_DESCRIPTION%"/>
+    <meta name="theme-color" content="%REACT_APP_THEME_COLOR%"/>
+    <meta charset="utf-8"/>
+
+    <title>%REACT_APP_TITLE%</title>
+
+    <!-- Manifest -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
+
+    <!-- Icons -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.png"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-    <meta name="theme-color" content="#282c34"/>
+
+    <!-- Analytics -->
     <script defer data-domain="example.com" src="https://plausible.io/js/plausible.js"></script>
+
+    <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
           integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
