--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="description" content="%REACT_APP_DESCRIPTION%"/>
     <meta name="theme-color" content="%REACT_APP_THEME_COLOR%"/>
-    <meta charset="utf-8"/>
 
     <title>%REACT_APP_TITLE%</title>
 
@@ -16,7 +16,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
 
     <!-- Analytics -->
-    <script defer data-domain="example.com" src="https://plausible.io/js/plausible.js"></script>
+    <script defer data-domain="%REACT_APP_PLAUSIBLE_ANALYTICS_DOMAIN%" src="https://plausible.io/js/plausible.js"></script>
 
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
